# PaddleDetection

./: .gitignore  .pre-commit-config.yaml  .travis.yml  0.sh  00run_focalnet_dino.sh  0fairmot.sh  0run.sh  0run_x_to_l.sh  1mcfairmot.sh  1small.sh  1small_m_to_s.sh  CMakeLists.txt  Dockerfile  README.md  README_cn.md  README_en .md  README_en ver2.md  README_en ver3.md  README_en.md  README_tw.md  box_utils.py  data.py  dataset  eval.sh  eval_solov2.sh  htc_r50_fpn_1x.yml  index.md  mkdocs.yml  new_file.txt  nohup.out.ttf.mot17  picodet_s_416_coco_lcnet_fgd_student.yml  requirements.txt  run_all.sh  run_all_fcos.sh  run_fcos_r50_fpn_1x_coco.sh  run_yolov3_darknet53_270e_coco.sh  setup.cfg  setup.py  stdout.txt  swin_transformer_tiny.yml  (+5 more)
.travis/: precommit.sh  requirements.txt  unittest.sh
activity/: 直播答疑第一期.md
benchmark/: README.md  analysis_log.py  prepare.sh  run_all.sh  run_benchmark.sh
configs/: cascade_mask_rcnn_r50_fpn_1x.yml  cascade_mask_rcnn_r50_fpn_1x_coco.yml  cascade_rcnn_cls_aware_r101_vd_fpn_1x_softnms.yml  cascade_rcnn_cls_aware_r101_vd_fpn_ms_test.yml  cascade_rcnn_cls_aware_r101_vd_fpn_softnms.yml  cascade_rcnn_r50_1x.yml  cascade_rcnn_r50_1x_coco.yml  cascade_rcnn_r50_fpn_1x.yml  cascade_rcnn_r50_fpn_1x_coco.yml  cascade_rcnn_r50_fpn_1x_ms_test.yml  cornernet_squeeze.yml  cornernet_squeeze_dcn_r50_vd_fpn.yml  cornernet_squeeze_r50_vd_fpn.yml  efficientdet_d0.yml  faster_fpn_reader.yml  faster_rcnn_cb_r50_vd_fpn_1x.yml  faster_rcnn_cbr101_vd_dual_fpn_1x.yml  faster_rcnn_cbr50_vd_dual_fpn_1x.yml  faster_rcnn_r101_1x.yml  faster_rcnn_r101_fpn_1x.yml  faster_rcnn_r101_fpn_2x.yml  faster_rcnn_r101_vd_fpn_1x.yml  faster_rcnn_r101_vd_fpn_2x.yml  faster_rcnn_r34_fpn_1x.yml  faster_rcnn_r34_vd_fpn_1x.yml  faster_rcnn_r50_1x.yml  faster_rcnn_r50_1x_coco.yml  faster_rcnn_r50_1x_coco_001.yml  faster_rcnn_r50_1x_roadsign.yml  faster_rcnn_r50_2x.yml  faster_rcnn_r50_fpn_1x.yml  faster_rcnn_r50_fpn_1x_coco.yml  faster_rcnn_r50_fpn_1x_coco_debug.yml  faster_rcnn_r50_fpn_1x_coco_minitrain.yml  faster_rcnn_r50_fpn_1x_roadsign.yml  faster_rcnn_r50_fpn_2x.yml  faster_rcnn_r50_fruit.yml  faster_rcnn_r50_roadsign.yml  faster_rcnn_r50_vd_1x.yml  faster_rcnn_r50_vd_fpn_2x.yml  (+68 more)
configs2/: blazeface.yml  faster_loader.yml  faster_rcnn_r50_1x.yml  faster_reader.yml  pedestrian_yolov3_darknet.yml  ssd_mobilenet_v1_voc.yml  ssd_vgg16_300_voc.yml  yolov3_darknet.yml  yolov3_reader.yml
contrib/: README.md  README_cn.md
dataset/: coco
demo/: infer_cfg.yml  mask_rcnn_demo.ipynb
deploy/: BENCHMARK_INFER.md  BENCHMARK_INFER_en.md  EXPORT_MODEL.md  EXPORT_MODEL_en.md  EXPORT_ONNX_MODEL.md  EXPORT_ONNX_MODEL_en.md  README.md  README_en.md  TENSOR_RT.md
deploy/android_demo/app/src/main/cpp/: CMakeLists.txt  Pipeline.cc  Utils.cc  Utils.h
deploy/cpp/: CMakeLists.txt  README.md  build.sh
deploy/cpp/cmake/: yaml-cpp.cmake
deploy/cpp/docs/: Jetson_build.md  TX2_build.md  linux_build.md  windows_vs2019_build.md
deploy/cpp/include/: config_parser.h  jde_detector.h  keypoint_detector.h  keypoint_postprocess.h  lapjv.h  object_detector.h  picodet_postprocess.h  preprocess_op.h  tracker.h  trajectory.h  util.h  utils.h
deploy/cpp/scripts/: bootstrap.sh  build.sh
deploy/cpp/src/: jde_detector.cc  keypoint_detector.cc  keypoint_postprocess.cc  lapjv.cpp  main.cc  main_jde.cc  main_keypoint.cc  object_detector.cc  object_detector.cc.bak  picodet_postprocess.cc  preprocess_op.cc  tracker.cc  trajectory.cc  util.cc  utils.cc
deploy/fastdeploy/kunlunxin/cpp/: CMakeLists.txt  README.md  infer.cc  pptinypose_infer.cc
deploy/fastdeploy/kunlunxin/cpp/det_keypoint_unite/: CMakeLists.txt  README.md  det_keypoint_unite_infer.cc
deploy/fastdeploy/rockchip/rknpu2/cpp/: CMakeLists.txt  README.md  infer.cc
deploy/fastdeploy/rockchip/rv1126/cpp/: CMakeLists.txt  README.md  infer.cc  run_with_adb.sh
deploy/fastdeploy/sophgo/cpp/: CMakeLists.txt  README.md  infer.cc
deploy/third_engine/demo_mnn/: CMakeLists.txt  README.md  main.cpp  picodet_mnn.cpp  picodet_mnn.hpp
deploy/third_engine/demo_mnn/python/: demo_mnn.py
deploy/third_engine/demo_mnn_kpts/: CMakeLists.txt  CMakeLists_armv8.txt  README.md  keypoint_detector.cpp  keypoint_detector.h  keypoint_postprocess.cpp  keypoint_postprocess.h  main.cpp  picodet_mnn.cpp  picodet_mnn.h
deploy/third_engine/demo_ncnn/: CMakeLists.txt  README.md  main.cpp  picodet.cpp  picodet.h
deploy/third_engine/demo_ncnn/python/: demo_ncnn.py
deploy/third_engine/demo_openvino/: CMakeLists.txt  README.md  main.cpp  picodet_openvino.cpp  picodet_openvino.h
deploy/third_engine/demo_openvino/python/: README.md  openvino_benchmark.py  openvino_infer.py
deploy/third_engine/demo_openvino/python/out_onnxsim/: picodet_xs_320_processed.onnx  picodet_xs_416_processed.onnx
deploy/third_engine/demo_openvino_kpts/: CMakeLists.txt  README.md  keypoint_detector.cpp  keypoint_detector.h  keypoint_postprocess.cpp  keypoint_postprocess.h  main.cpp  picodet_openvino.cpp  picodet_openvino.h
docs/: BENCHMARK_INFER_cn.md  CACascadeRCNN.md  CHANGELOG.md  CHANGELOG_en.md  CONFIG.md  CONFIG_cn.md  DATA.md  DATA_cn.md  EXPORT_MODEL.md  FAQ.md  GETTING_STARTED.md  GETTING_STARTED_cn.md  INFERENCE.md  INSTALL.md  INSTALL_cn.md  MODEL_ZOO.md  MODEL_ZOO_cn.md  MODEL_ZOO_en.md  OIDV5_BASELINE_MODEL.md  OIDV5_CASCADECLSAWARE.md  PaddleDetection动转静支持列表.md  PrepareDataSet.md  QUICK_STARTED.md  QUICK_STARTED_cn.md  TRANSFER_LEARNING.md  TRANSFER_LEARNING_cn.md  YOLOv3_ENHANCEMENT.md  conf.py  index.rst  luckydraw.md  train_on_kunlun.md
dygraph/: .gitignore  .travis.yml  0run_jde.sh  README.md  requirements.txt  setup.py
ext_op/: __init__.py  cornerpool_lib.py
handpose/: LICENSE  README.md  camera.py  inference.py  read_datasets.py  train.py
industrial_tutorial/: README.md  README_cn.md
inference/: CMakeLists.txt  README.md  detection_demo.cpp
ppdet/: __init__.py  optimizer.py
ppsmrt/: DataAnalysis.md  README.md
scripts/: build_wheel.sh  cam_demo_faster_rcnn.sh  cam_demo_ppyoloe.sh
slim/: MODEL_ZOO.md  README.md  eval.py  infer.py
src/: binding.cc  nms.cc
(+4424 files in other folders)
